--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
+    "@metaplex-foundation/js": "^0.20.1",
     "@project-serum/anchor": "^0.26.0",
     "@solana/actions": "^1.0.1",
     "@solana/spl-token": "^0.4.8",
